<resources>
    <string name="app_name">NJU Lib QAbot</string>
    <string name="bt_power_on">开始录音</string>
    <string name="bt_power_off">结束录音</string>
    <string name="bt_query">问答查询</string>
    <string name="bt_speak">播放语音</string>
    <string name="lb_input">输入识别：</string>
    <string name="lb_output">输出合成：</string>
    <string name="lb_status">状态(debug)：</string>

    <string name="asr_server_ip">210.28.134.114</string>
    <string name="asr_server_port">15101</string>
    <string name="qa_server_ip">210.28.134.114</string>
    <string name="qa_server_port">15102</string>
    <string name="tts_server_ip">210.28.134.114</string>
    <string name="tts_server_port">15103</string>
</resources>